syntax = "proto3";

package wallaby.v1;

import "wallaby/v1/types.proto";

option go_package = "github.com/josephjohncox/wallaby/gen/go/wallaby/v1;wallabypb";

service FlowService {
  rpc CreateFlow(CreateFlowRequest) returns (Flow);
  rpc UpdateFlow(UpdateFlowRequest) returns (Flow);
  rpc StartFlow(StartFlowRequest) returns (Flow);
  rpc RunFlowOnce(RunFlowOnceRequest) returns (RunFlowOnceResponse);
  rpc StopFlow(StopFlowRequest) returns (Flow);
  rpc ResumeFlow(ResumeFlowRequest) returns (Flow);
  rpc GetFlow(GetFlowRequest) returns (Flow);
  rpc ListFlows(ListFlowsRequest) returns (ListFlowsResponse);
  rpc DeleteFlow(DeleteFlowRequest) returns (DeleteFlowResponse);
}

message CreateFlowRequest {
  Flow flow = 1;
  bool start_immediately = 2;
}

message UpdateFlowRequest {
  Flow flow = 1;
}

message StartFlowRequest {
  string flow_id = 1;
}

message RunFlowOnceRequest {
  string flow_id = 1;
}

message RunFlowOnceResponse {
  bool dispatched = 1;
}

message StopFlowRequest {
  string flow_id = 1;
}

message ResumeFlowRequest {
  string flow_id = 1;
}

message GetFlowRequest {
  string flow_id = 1;
}

message ListFlowsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListFlowsResponse {
  repeated Flow flows = 1;
  string next_page_token = 2;
}

message DeleteFlowRequest {
  string flow_id = 1;
}

message DeleteFlowResponse {
  bool deleted = 1;
}
